--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -13,8 +13,8 @@ on:
 
 env:
   IMAGE_REGISTRY_URL: ghcr.io
-  DOCKER_IMAGE_NAME: clinton.ewertz@slantmind.com-azure-ttt
-  AZURE_WEBAPP_NAME: clinton.ewertz@slantmind.com-ttt-app
+  DOCKER_IMAGE_NAME: cewertz-azure-ttt
+  AZURE_WEBAPP_NAME: cewertz-ttt-app
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
